# tick

./: .gitignore  AGENTS.md  LICENSE  README.md  go.mod  pyproject.toml
.github/workflows/: release.yml
cmd/tick/: main.go
cmd/tuitodo/: main.go
docs/plans/: 2026-03-04-github-release-workflow-design.md  2026-03-04-github-release-workflow.md  2026-03-04-tui-todo-design.md  2026-03-04-tui-todo-implementation-plan.md  2026-03-05-history-task3.md  2026-03-05-remove-number-view-shortcuts.md  2026-03-05-tick-ui-fullscreen-layout-design.md  2026-03-05-tick-ui-fullscreen-layout.md  2026-03-05-tick-ui-refresh-design.md  2026-03-05-tick-ui-refresh.md  2026-03-05-tick-ui-tabs-history-design.md  2026-03-05-tick-ui-tabs-history.md  2026-03-06-repo-full-refactor-design.md  2026-03-06-repo-full-refactor.md  2026-03-06-tick-ui-align-empty-states-design.md  2026-03-06-tick-ui-align-empty-states.md  2026-03-06-tick-ui-history-date-table-design.md  2026-03-06-tick-ui-history-date-table.md  2026-03-06-tick-ui-inset-separators.md  2026-03-09-task-selection-unify-design.md  2026-03-09-task-selection-unify.md
internal/app/: app.go  app_internal_test.go  app_test.go  config.go  config_test.go  outcome_ratios.go  version.go
internal/domain/: day.go  day_test.go  task.go  task_test.go
internal/store/: query.go  store.go  store_test.go
internal/store/sqlite/: dsn_test.go  isolation_test.go  migrate.go  sqlite.go  sqlite_internal_test.go  sqlite_query_test.go  sqlite_test.go  (+1 more)
internal/timeutil/: clock.go  day.go  day_test.go
internal/ui/: branding_test.go  keys.go  layout.go  model.go  model_active.go  model_history.go  model_history_test.go  model_modal.go  model_test.go  model_tick_test.go  styles.go  styles_test.go  testkit_test.go  views.go
src/tick/: __init__.py  __main__.py  app.py  backend.py  dispatcher.py  help_text.py  history.py  screens.py  table_view.py  tick.tcss
tests/: conftest.py  test_app.py  test_backend.py  test_dispatcher.py  test_history.py  test_mutations.py
